--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <title>Planetary Response Network: event maps</title>
+<style>
+  #map {
+    height: 100vh;
+    width: 100vw;
+    background: #ccc;
+  }
+</style>
+
+<div id="map">
+  Loading…
+</div>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_WfaVGw6NVmWVt4tNG7S7MPzZLF72EmA&libraries=visualization"></script>
 <script src="/js/papaparse.min.js"></script>
 <script src="/js/app.js"></script>
-
