--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
   Loading…
 </div>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuB-Cc3bS2NYFnAKiNa-6lrE0g70wFh6c&libraries=visualization"></script>
-<script src="/js/papaparse.min.js"></script>
-<script src="/js/app.js"></script>
+<script src="js/papaparse.min.js"></script>
+<script src="js/app.js"></script>
