Add a map layer menu

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     background: #ccc;
   }
 </style>
-
+<label>
+  Select a heat map:
+  <select id="map-select">
+    <option value="0" checked>overlay_0.csv</option>
+    <option value="1" checked>overlay_1.csv</option>
+    <option value="2" checked>overlay_2.csv</option>
+    <option value="3" checked>overlay_3.csv</option>
+  </select>
+</label>
 <div id="map">
   Loading…
 </div>
