Add a threshold value control Add a range input to vary the threshold weight between one and five. Only rescale the map after changing to a new CSV file.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
     <option value="3" checked>overlay_3.csv</option>
   </select>
 </label>
+<label>
+  Threshold:
+  1
+  <input
+    id="map-threshold"
+    type="range"
+    min="1"
+    max="5"
+    value="2"
+  >
+  5
+</label>
 <div id="map">
   Loading…
 </div>
