--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
   Loading…
 </div>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuB-Cc3bS2NYFnAKiNa-6lrE0g70wFh6c&libraries=visualization"></script>
+<script src="js/superagent.js"></script>
 <script src="js/papaparse.min.js"></script>
+<script src="js/api.js"></script>
 <script src="js/app.js"></script>
