Build events list from the API Get events from the API then build an unordered list of links by event name.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <title>Planetary Response Network: events</title>
 
 <h1>Planetary Response Network: Events</h1>
-<ul>
-  <li><a href="maps?event=dominica_2018_demo">Test event</a></li>
+<ul id="events">
 </ul>
+<script src="/js/superagent.js"></script>
+<script src="/js/api.js"></script>
+<script src="/js/events.js"></script>
