Basic page styles Move styles into a stylesheet and add basic typography styles.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <title>Planetary Response Network: events</title>
+<link rel="stylesheet" type="text/css" href="/css/main.css">
 
 <h1>Planetary Response Network: Events</h1>
 <ul id="events">
