--- a/maps/index.html
+++ b/maps/index.html
@@ -1,51 +1,32 @@
 <!DOCTYPE html>
 <title>Planetary Response Network: event maps</title>
-<style>
-  body {
-    display: grid;
-    grid-template-columns: 1fr 4fr;
-    grid-gap: .5em;
-    font-family: sans-serif;
-    background: #fffefd;
-    color: #000102;
-    margin: .5em;
-    font-size: .9em;
-    line-height: 1.5;
-  }
-
-  #map-select label {
-    display: block;
-  }
-  #map {
-    height: 95vh;
-    width: 100%;
-    background: #ccc;
-  }
-</style>
-<div>
-  <fieldset id="map-select">
-    <legend>Select a heat map:</legend>
-    <label><input type=checkbox value=0>overlay_0.csv</label>
-    <label><input type=checkbox value=1>overlay_1.csv</label>
-    <label><input type=checkbox value=2>overlay_2.csv</label>
-    <label><input type=checkbox value=3>overlay_3.csv</label>
-  </fieldset>
-  <label>
-    Threshold:
-    1
-    <input
-      id="map-threshold"
-      type="range"
-      min="1"
-      max="5"
-      value="2"
-    >
-    5
-  </label>
-</div>
-<div id="map">
-  Loading…
-</div>
+<link rel="stylesheet" type="text/css" href="/css/main.css">
+<main id="map-page">
+  <div>
+    <fieldset id="map-select">
+      <legend>Select a heat map:</legend>
+      <label><input type=checkbox value=0>overlay_0.csv</label>
+      <label><input type=checkbox value=1>overlay_1.csv</label>
+      <label><input type=checkbox value=2>overlay_2.csv</label>
+      <label><input type=checkbox value=3>overlay_3.csv</label>
+    </fieldset>
+    <label>
+      Threshold:
+      1
+      <input
+        id="map-threshold"
+        type="range"
+        min="1"
+        max="5"
+        value="2"
+      >
+      5
+    </label>
+  </div>
+  <div id="map">
+    Loading…
+  </div>
+</main>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuB-Cc3bS2NYFnAKiNa-6lrE0g70wFh6c&libraries=visualization"></script>
 <script src="/js/superagent.js"></script>
 <script src="/js/papaparse.min.js"></script>
