Reorganise Upload page

--- a/maps/upload.html
+++ b/maps/upload.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <title>Planetary Response Network: file uploader</title>
 <link rel="stylesheet" type="text/css" href="/css/main.css">
+<link rel="stylesheet" type="text/css" href="/css/upload.css">
+
 <main id="upload-page">
   <form>
     <div class="row">
@@ -18,48 +20,11 @@
       <input name="data" type="file" accept=".csv, .json" multiple>
     </div>
     <div class="row">
-      <input type="submit" value="Upload">
+      <input id="submit-button" type="button" value="Upload">
     </div>
   </form>
 </main>
 
-<style>
-  #upload-page form {
-    
-  }
-  
-  #upload-page form .row {
-    padding: 1em
-  }
-  
-  #upload-page form .row label {
-    display: block;
-    font-weight: bold;
-  }
-  
-  #upload-page form #metadata {
-    width: 24em;
-    height: 16em;
-  }
-</style>
-  
-<script>
-  const htmlMetadata = document.getElementById('metadata');
-  const htmlMetadataStatus = document.getElementById('metadata-status');
-  
-  function checkMetadata() {
-    const metadata = htmlMetadata.value;
-    
-    try {
-      const json = JSON.parse(metadata);
-      htmlMetadataStatus.textContent = 'JSON OK';
-    } catch (err) {
-      htmlMetadataStatus.textContent = 'Invalid JSON: ' + err;
-    }
-  }
-  
-  htmlMetadata.onkeyup = checkMetadata;
-  htmlMetadata.onblur = checkMetadata;
-  htmlMetadata.onpaste = checkMetadata;
-  checkMetadata();
-</script>
+<script src="/js/superagent.js"></script>
+<script src="/js/api.js"></script>
+<script src="/js/upload.js"></script>
