Allow changing of Form Action based on selected event

--- a/maps/upload.html
+++ b/maps/upload.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="/css/upload.css">
 
 <main id="upload-page">
-  <form method="post" action="https://maps-api.planetaryresponsenetwork.org/uploads">
+  <form id="upload-form" method="post" action="#" enctype="multipart/form-data">
     <div class="row">
       <label for="metadata" for="event">Event Name</label>
       <select id="event" name="event"></select>
