Move Events list outside of the form

--- a/maps/upload.html
+++ b/maps/upload.html
@@ -4,12 +4,14 @@
 <link rel="stylesheet" type="text/css" href="/css/upload.css">
 
 <main id="upload-page">
-  <form id="upload-form" method="post" action="#" enctype="multipart/form-data">
+  <section>
     <div class="row">
       <label for="metadata" for="event">Event Name</label>
       <select id="event" name="event"></select>
     </div>
-    
+  </section>
+  
+  <form id="upload-form" method="post" action="#" enctype="multipart/form-data">
     <div class="row">
       <label for="metadata">Metadata</label>
 <textarea id="metadata" name="metadata">
