--- a/maps/upload.html
+++ b/maps/upload.html
@@ -25,8 +25,12 @@
     </div>
     -->
     <div class="row">
-      <label for="data">Files</label>
-      <input id="data" name="data" type="file" accept=".csv, .json" multiple>
+      <label for="metadata">Metadata File (JSON)</label>
+      <input id="metadata-file" name="metadata" type="file" accept=".json">
+    </div>
+    <div class="row">
+      <label for="layers[]">Layers Files (CSVs)</label>
+      <input id="layers-files" name="layers[]" type="file" accept=".csv" multiple>
     </div>
     <div class="row">
       <input id="submit-button" type="submit" value="Upload">
