Data posting now acknowledges error and success messages

--- a/maps/upload.html
+++ b/maps/upload.html
@@ -25,11 +25,11 @@
     </div>
     -->
     <div class="row">
-      <label for="metadata">Metadata File (JSON)</label>
+      <label for="metadata-file">Metadata File (JSON)</label>
       <input id="metadata-file" name="metadata" type="file" accept=".json">
     </div>
     <div class="row">
-      <label for="layers[]">Layers Files (CSVs)</label>
+      <label for="layers-files">Layers Files (CSVs)</label>
       <input id="layers-files" name="layers[]" type="file" accept=".csv" multiple>
     </div>
     <div class="row">
