Advanced analytics now reads the content of the Metadata file

--- a/maps/upload.html
+++ b/maps/upload.html
@@ -21,6 +21,9 @@
       <input id="layers-files" name="layers[]" type="file" accept=".csv" multiple>
     </div>
     <div class="row">
+      <span id="advanced-console"></span>
+    </div>
+    <div class="row">
       <input id="submit-button" type="button" value="Upload">
     </div>
     <div class="row">
