Improve styling, fix bug with removed Groups

--- a/maps/index.html
+++ b/maps/index.html
@@ -5,10 +5,13 @@
   <div>
     <fieldset id="map-select">
       <legend>Select a heat map:</legend>
-      <label><input type=checkbox value=0>overlay_0.csv</label>
-      <label><input type=checkbox value=1>overlay_1.csv</label>
-      <label><input type=checkbox value=2>overlay_2.csv</label>
-      <label><input type=checkbox value=3>overlay_3.csv</label>
+      <div class="group">
+        <h6>v0</h6>
+        <label><input type=checkbox value=0>overlay_0.csv</label>
+        <label><input type=checkbox value=1>overlay_1.csv</label>
+        <label><input type=checkbox value=2>overlay_2.csv</label>
+        <label><input type=checkbox value=3>overlay_3.csv</label>
+      </div>
     </fieldset>
     <label>
       Threshold:
