Reorganise CSS files

--- a/maps/upload.html
+++ b/maps/upload.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <title>Planetary Response Network: file uploader</title>
 <link rel="stylesheet" type="text/css" href="/css/main.css">
-<link rel="stylesheet" type="text/css" href="/css/upload.css">
+<link rel="stylesheet" type="text/css" href="/css/upload-page.css">
 
 <main id="upload-page">
   <section>
