--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <title>Planetary Response Network: events</title>
 <link rel="stylesheet" type="text/css" href="/css/main.css">
-
-<h1>Planetary Response Network: Events</h1>
-<ul id="events">
-</ul>
+<link rel="stylesheet" type="text/css" href="/css/events-page.css">
+<main id="events-page">
+  <h1>Planetary Response Network: Events</h1>
+  <ul id="events">
+  </ul>
+</main>
 <script src="/js/superagent.js"></script>
 <script src="/js/api.js"></script>
 <script src="/js/events.js"></script>
