--- a/maps/index.html
+++ b/maps/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <title>Planetary Response Network: event maps</title>
 <link rel="stylesheet" type="text/css" href="/css/main.css">
+<link rel="stylesheet" type="text/css" href="/css/map-page.css">
 <main id="map-page">
   <div>
     <fieldset id="map-select">
