Improve HTML of Map controls

--- a/maps/index.html
+++ b/maps/index.html
@@ -3,17 +3,17 @@
 <link rel="stylesheet" type="text/css" href="/css/main.css">
 <link rel="stylesheet" type="text/css" href="/css/map-page.css">
 <main id="map-page">
-  <div>
-    <fieldset id="map-select">
-      <legend>Select a heat map:</legend>
-      <div class="group">
-        <h6>v0</h6>
+  <div id="map-controls">
+    <form id="map-select">
+      <h6>Select a heat map:</h6>
+      <fieldset class="group">
+        <legend>v0</legend>
         <label><input type=checkbox value=0>overlay_0.csv</label>
         <label><input type=checkbox value=1>overlay_1.csv</label>
         <label><input type=checkbox value=2>overlay_2.csv</label>
         <label><input type=checkbox value=3>overlay_3.csv</label>
-      </div>
-    </fieldset>
+      </fieldset>
+    </form>
     <label>
       Threshold:
       1
