allow a single layer to load
layer query param loads a single approved layer from the API

--- a/maps/index.html
+++ b/maps/index.html
@@ -36,4 +36,4 @@
 <script src="/js/superagent.js"></script>
 <script src="/js/papaparse.min.js"></script>
 <script src="/js/api.js"></script>
-<script src="/js/maps.js"></script>
+<script type="module" src="/js/maps.js"></script>
