--- a/maps/upload.html
+++ b/maps/upload.html
@@ -31,4 +31,4 @@
 
 <script src="/js/superagent.js"></script>
 <script src="/js/api.js"></script>
-<script src="/js/upload.js"></script>
+<script type="module" src="/js/upload.js"></script>
