--- a/maps/index.html
+++ b/maps/index.html
@@ -14,19 +14,21 @@
         <label><input type=checkbox value=3>overlay_3.csv</label>
       </fieldset>
     </form>
-    <label>
-      Threshold:
-      1
-      <input
-        id="map-threshold"
-        type="range"
-        min="1"
-        max="5"
-        value="2"
-      >
-      5
-    </label>
-    <button id="zoom-to-fit">Zoom to fit</button>
+    <div id="map-filters">
+      <label>
+        Threshold:
+        1
+        <input
+          id="map-threshold"
+          type="range"
+          min="1"
+          max="5"
+          value="2"
+        >
+        5
+      </label>
+      <button id="zoom-to-fit">Zoom to fit</button>
+    </div>
   </div>
   <div id="map">
     Loading…
