Update structure of map controls in preparation for Legends

--- a/maps/index.html
+++ b/maps/index.html
@@ -8,10 +8,11 @@
       <h6>Select a heat map:</h6>
       <fieldset class="group">
         <legend>v0</legend>
-        <label><input type=checkbox value=0>overlay_0.csv</label>
-        <label><input type=checkbox value=1>overlay_1.csv</label>
-        <label><input type=checkbox value=2>overlay_2.csv</label>
-        <label><input type=checkbox value=3>overlay_3.csv</label>
+        <div class="submenu">Loading...</div>
+        <div class="layer">
+          <label><input type=checkbox value=0>overlay_0.csv</label>
+        </div>
+        <button>Toggle group</button>
       </fieldset>
     </form>
     <div id="map-filters">
