use ES6 modules for API code
avoid module race condition loads for modules, i.e. API wasn't defined when referencing in the module script.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
   </ul>
 </main>
 <script src="/js/superagent.js"></script>
-<script src="/js/api.js"></script>
-<script src="/js/events.js"></script>
+<script type="module" src="/js/api.js"></script>
+<script type="module" src="/js/events.js"></script>
