--- a/maps/upload.html
+++ b/maps/upload.html
@@ -10,7 +10,7 @@
       <select id="event-list" name="event-list"></select>
     </div>
   </section>
-  
+
   <form id="upload-form" method="post" action="#" enctype="multipart/form-data">
     <div class="row">
       <label for="metadata-file">Metadata File (JSON)</label>
@@ -30,5 +30,5 @@
 </main>
 
 <script src="/js/superagent.js"></script>
-<script src="/js/api.js"></script>
+<script type="module" src="/js/api.js"></script>
 <script type="module" src="/js/upload.js"></script>
